--- a/Task 2/BinaryClassification.ipynb
+++ b/Task 2/BinaryClassification.ipynb
@@ -363,7 +363,7 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "data = pd.read_csv('training.csv', sep=\";\")\n",
+    "data = pd.read_csv('dataset/training.csv', sep=\";\")\n",
     "data"
    ]
   },
